# gslam_bowbench

./: .gitmodules  CMakeLists.txt  README.md
src/: FeatureDetector.h  MemoryMetric.cpp  MemoryMetric.h  main.cpp
src/features/: FeatureDetectorORB.cpp  FeatureDetectorSiftGPU.cpp  OpenGL.h
src/features/SiftGPU/: GLTexImage.cpp  GlobalUtil.cpp  ProgramGLSL.cpp  ProgramGLSL.h  ProgramGPU.h  SiftGPU.cpp
src/include/DBoW2/: FSift.h
src/include/GSLAM/core/: MemoryMetric.h  Svar.h  Vocabulary.h
src/include/opencv2/: core.hpp
